force-app/main/default/objects/HRCFSL_Inspection_Template_Tool__c/HRCFSL_Inspection_Template_Tool__c.object-meta.xml
<CustomObject>
    <description>Custom object that stores required and optional tools that are needed in order to complete an inspection.</description>
    <label>Inspection Template Tool</label>
    <nameField>
        <label>Inspection Template Tool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inspection Template Tools</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>