force-app/main/default/objects/HRCFSL_Inspection_Template_Tool__c/fields/HRCFSL_Inspection_Template__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Inspection_Template__c</fullName>
    <label>Inspection Template</label>
    <referenceTo>HRCFSL_Inspection_Template__c</referenceTo>
    <relationshipLabel>Inspection Template Tools</relationshipLabel>
    <relationshipName>Inspection_Template_Tools</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>