force-app/main/default/objects/HRCFSL_Inspection_Template_Tool__c/fields/HRCFSL_Product_Model__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Product_Model__c</fullName>
    <description>The product model of the tool which is either required or optional.</description>
    <label>Product Model</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>