force-app/main/default/objects/HRCFSL_Inspection_Template_Tool__c/fields/HRCFSL_Required__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this tool is required in order to complete this inspection. The default setting is optional.</inlineHelpText>
    <label>Required?</label>
    <type>Checkbox</type>
</CustomField>